Reorganization of toolbars